# flaglet

./: Cargo.toml  LICENSE-BSD-2-Clause  README.md
.github/workflows/: rust.yml
src/: lib.rs
tests/: integration.rs  std.rs
